[gd_scene load_steps=34 format=3 uid="uid://b3dytvsrqcvtw"]

[ext_resource type="Script" path="res://assets/entities/greed/greed.gd" id="1_qcrjb"]
[ext_resource type="PackedScene" uid="uid://8hvro5jlo4j3" path="res://assets/entities/greed/coin.tscn" id="2_lhh2b"]
[ext_resource type="Texture2D" uid="uid://dpisbbly7j2x3" path="res://assets/entities/greed/sprites/greed_attack_down_1.png" id="2_wity6"]
[ext_resource type="Texture2D" uid="uid://bijj1e58pceh4" path="res://assets/entities/greed/sprites/greed_attack_down_2.png" id="3_ywaeu"]
[ext_resource type="Texture2D" uid="uid://u0vesiavuof5" path="res://assets/entities/greed/sprites/greed_attack_down_4.png" id="4_sk0xt"]
[ext_resource type="Texture2D" uid="uid://bq88vdsshgdtp" path="res://assets/entities/greed/sprites/greed_move_left_0.png" id="5_35s4j"]
[ext_resource type="Texture2D" uid="uid://cscg8cagtjuvh" path="res://assets/entities/greed/sprites/greed_attack_left_2.png" id="6_nsthg"]
[ext_resource type="Texture2D" uid="uid://dyb2ubpck2m7f" path="res://assets/entities/greed/sprites/greed_attack_left_4.png" id="7_qkdsg"]
[ext_resource type="Texture2D" uid="uid://dx5pd2hbfslw7" path="res://assets/entities/greed/sprites/greed_attack_right_1.png" id="8_4k8jn"]
[ext_resource type="Texture2D" uid="uid://b2meu1jcysph0" path="res://assets/entities/greed/sprites/greed_attack_right_2.png" id="9_6k1i5"]
[ext_resource type="Texture2D" uid="uid://bwrhmvc7drnty" path="res://assets/entities/greed/sprites/greed_attack_right_4.png" id="10_sjf6o"]
[ext_resource type="Texture2D" uid="uid://3rwlx4qoku1q" path="res://assets/entities/greed/sprites/greed_attack_up_1.png" id="11_kyjna"]
[ext_resource type="Texture2D" uid="uid://66npe7err81e" path="res://assets/entities/greed/sprites/greed_attack_up_2.png" id="12_467fp"]
[ext_resource type="Texture2D" uid="uid://cvmh0ustxsi0m" path="res://assets/entities/greed/sprites/greed_attack_up_4.png" id="13_eb15v"]
[ext_resource type="Texture2D" uid="uid://ddel3keuyki7m" path="res://assets/entities/greed/sprites/greed_move_down_0.png" id="14_nj84v"]
[ext_resource type="Texture2D" uid="uid://ct2uhgkx450ci" path="res://assets/entities/greed/sprites/greed_move_down_1.png" id="15_t2ar5"]
[ext_resource type="Texture2D" uid="uid://crtl38oi3dqge" path="res://assets/entities/greed/sprites/greed_move_down_2.png" id="16_7i3y6"]
[ext_resource type="Texture2D" uid="uid://4kpvg3ejwdn" path="res://assets/entities/greed/sprites/greed_move_left_1.png" id="17_lgpj0"]
[ext_resource type="Texture2D" uid="uid://cc2c2cbha7w7k" path="res://assets/entities/greed/sprites/greed_move_left_2.png" id="18_68cvm"]
[ext_resource type="Texture2D" uid="uid://d10263aptu2ti" path="res://assets/entities/greed/sprites/greed_move_right_0.png" id="19_mgrcb"]
[ext_resource type="Texture2D" uid="uid://ccjmh4c2tassk" path="res://assets/entities/greed/sprites/greed_move_right_1.png" id="20_8uh6p"]
[ext_resource type="Texture2D" uid="uid://cywfuefrnj506" path="res://assets/entities/greed/sprites/greed_move_right_2.png" id="21_13abm"]
[ext_resource type="Texture2D" uid="uid://deag66br3t27l" path="res://assets/entities/greed/sprites/greed_move_up_0.png" id="22_nykej"]
[ext_resource type="Texture2D" uid="uid://bkw2ndvocncai" path="res://assets/entities/greed/sprites/greed_move_up_1.png" id="23_nyx4u"]
[ext_resource type="Texture2D" uid="uid://r2goec34errv" path="res://assets/entities/greed/sprites/greed_move_up_2.png" id="24_y1mbq"]
[ext_resource type="Script" path="res://assets/entities/hurt.gd" id="29_2agmf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xx0fn"]
size = Vector2(10, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_c3lg3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wity6")
}, {
"duration": 1.0,
"texture": ExtResource("3_ywaeu")
}, {
"duration": 1.0,
"texture": ExtResource("2_wity6")
}, {
"duration": 1.0,
"texture": ExtResource("4_sk0xt")
}],
"loop": true,
"name": &"attack_down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_35s4j")
}, {
"duration": 1.0,
"texture": ExtResource("6_nsthg")
}, {
"duration": 1.0,
"texture": ExtResource("5_35s4j")
}, {
"duration": 1.0,
"texture": ExtResource("7_qkdsg")
}],
"loop": false,
"name": &"attack_left",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_4k8jn")
}, {
"duration": 1.0,
"texture": ExtResource("9_6k1i5")
}, {
"duration": 1.0,
"texture": ExtResource("8_4k8jn")
}, {
"duration": 1.0,
"texture": ExtResource("10_sjf6o")
}],
"loop": true,
"name": &"attack_right",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_kyjna")
}, {
"duration": 1.0,
"texture": ExtResource("12_467fp")
}, {
"duration": 1.0,
"texture": ExtResource("11_kyjna")
}, {
"duration": 1.0,
"texture": ExtResource("13_eb15v")
}],
"loop": true,
"name": &"attack_up",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_nj84v")
}, {
"duration": 1.0,
"texture": ExtResource("15_t2ar5")
}, {
"duration": 1.0,
"texture": ExtResource("14_nj84v")
}, {
"duration": 1.0,
"texture": ExtResource("16_7i3y6")
}],
"loop": true,
"name": &"move_down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_35s4j")
}, {
"duration": 1.0,
"texture": ExtResource("17_lgpj0")
}, {
"duration": 1.0,
"texture": ExtResource("5_35s4j")
}, {
"duration": 1.0,
"texture": ExtResource("18_68cvm")
}],
"loop": true,
"name": &"move_left",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_mgrcb")
}, {
"duration": 1.0,
"texture": ExtResource("20_8uh6p")
}, {
"duration": 1.0,
"texture": ExtResource("19_mgrcb")
}, {
"duration": 1.0,
"texture": ExtResource("21_13abm")
}],
"loop": true,
"name": &"move_right",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_nykej")
}, {
"duration": 1.0,
"texture": ExtResource("23_nyx4u")
}, {
"duration": 1.0,
"texture": ExtResource("22_nykej")
}, {
"duration": 1.0,
"texture": ExtResource("24_y1mbq")
}],
"loop": true,
"name": &"move_up",
"speed": 4.0
}]

[sub_resource type="Animation" id="Animation_2qf01"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_40a8a"]
resource_name = "clear"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.501961, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fagb7"]
resource_name = "hurt"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.501961, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ijn07"]
_data = {
"RESET": SubResource("Animation_2qf01"),
"clear": SubResource("Animation_40a8a"),
"hurt": SubResource("Animation_fagb7")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u2f1h"]
radius = 6.0
height = 15.0

[node name="greed" type="CharacterBody2D"]
z_as_relative = false
collision_layer = 4
collision_mask = 7
motion_mode = 1
script = ExtResource("1_qcrjb")
coin_scene = ExtResource("2_lhh2b")

[node name="GreedCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xx0fn")

[node name="GreedAnimation" type="AnimatedSprite2D" parent="GreedCollision"]
z_index = 1
z_as_relative = false
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_c3lg3")
animation = &"move_up"

[node name="AnimationPlayer" type="AnimationPlayer" parent="GreedCollision/GreedAnimation"]
libraries = {
"": SubResource("AnimationLibrary_ijn07")
}

[node name="greedhurt" type="Area2D" parent="."]
position = Vector2(0, -3)
collision_layer = 20
collision_mask = 2
script = ExtResource("29_2agmf")

[node name="GreedHurt" type="CollisionShape2D" parent="greedhurt"]
shape = SubResource("CapsuleShape2D_u2f1h")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 8.0
target_desired_distance = 8.0
path_max_distance = 64.0
avoidance_enabled = true
avoidance_layers = 4
avoidance_mask = 7

[node name="HitCooldown" type="Timer" parent="."]
one_shot = true

[node name="WeaponCooldown" type="Timer" parent="."]
one_shot = true

[node name="WeaponPos" type="Marker2D" parent="."]

[node name="RayUp" type="RayCast2D" parent="."]
visible = false
position = Vector2(-3, 0)
target_position = Vector2(0, -320)
collision_mask = 33
collide_with_areas = true

[node name="RayUp2" type="RayCast2D" parent="."]
visible = false
position = Vector2(3, 0)
target_position = Vector2(0, -320)
collision_mask = 33
collide_with_areas = true

[node name="RayDown" type="RayCast2D" parent="."]
visible = false
position = Vector2(-3, 0)
target_position = Vector2(0, 320)
collision_mask = 33
collide_with_areas = true

[node name="RayDown2" type="RayCast2D" parent="."]
visible = false
position = Vector2(3, 0)
target_position = Vector2(0, 320)
collision_mask = 33
collide_with_areas = true

[node name="RayLeft" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -3)
target_position = Vector2(-320, 0)
collision_mask = 33
collide_with_areas = true

[node name="RayLeft2" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 3)
target_position = Vector2(-320, 0)
collision_mask = 33
collide_with_areas = true

[node name="RayRight" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -3)
target_position = Vector2(320, 0)
collision_mask = 33
collide_with_areas = true

[node name="RayRight2" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 3)
target_position = Vector2(320, 0)
collision_mask = 33
collide_with_areas = true

[connection signal="area_entered" from="greedhurt" to="." method="_on_greedhurt_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="HitCooldown" to="." method="_on_hit_cooldown_timeout"]
[connection signal="timeout" from="WeaponCooldown" to="." method="_on_weapon_cooldown_timeout"]
